1999-08-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.adb: Remove useless with clause.

1999-08-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garter.adb: Change use of global critical section into use of
 	specific mutex to avoid deadlocks.

1999-08-02  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.adb: Implement yet another termination algorithm, much
	more efficient than the two previous ones. This one can terminate
	in only one wave in some cases, two waves in the worst case.

	* s-garhea.adb: Call Activity_Detected only when sending
	Remote_Call related messages. Part of the brand new termination
	algorithm.

1999-07-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garpar.ads, s-garpar.adb: Export Dump_Partition_Table so that
	it can be used to debug the termination algorithm.
	Fix bug in Online_Partitions (was using Is_Known instead of
	Is_Online).
	Rewrite Matching_Partitions more efficiently.

1999-07-28  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.adb: Remove reference to Termination_Shutdown.

	* s-garter.adb: Implement new wave-based algorithm. This one
	should work in all the cases, even in presence of messages in
	transit.

	* s-gasoli.ads, s-gasoli.adb: Remove *Termination_Shutdown
	subprograms as they are not used anymore.

	* s-garpar.ads, s-garpar.adb: New subprogram Has_Local_Termination 
	used by the termination algorithm.

1999-07-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garpar.adb, s-garpar.ads: Add new subprograms Set_Online and
 	Online_Partitions to get the list of partitions a partition has
 	communicated with.

	* s-gartcp.adb: Call Set_Online subprogram to signal whether the
	current partition has a connection with a given partition.

	* s-garhea.adb: When we send a message is sent to boot server,
	retry only when the boot server partition id has changed.

	* s-garpar.adb: (Get_Partition_Info) Send request on a partition
	outside the mutex. (Next_Boot_Mirror) Do not raise Program_Error,
	add an assertion failure.
